test/error/ast/PredefinedNameHide.mod
MODULE PredefinedNameHide;
PROCEDURE ABS;
END ABS;
END PredefinedNameHide.
